syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.iam.grpc.iam";
option java_outer_classname = "IamProto";
option objc_class_prefix = "RTG";

package iam;

service Iam {
  rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse) {}
}

message CheckTokenRequest {
  string token = 2;
}

message CheckTokenResponse {
  bool valid = 1;
  string user_principal = 2;
  string user_attributes = 3;
}
